--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,23 +81,23 @@
     <string name="after_class_data">After class page data</string>
     <string name="open_source">开源协议</string>
     <string name="from_college">Grab since the civil affairs college educational system and the official website, copyright owned by the original author</string>
-    <string name="from_net">数据来自于网上api，版权归原作者所有</string>
+    <string name="from_net">Grab since the civil affairs internet, copyright owned by the original author</string>
     <string name="feedback_message">民院+现在属于初期版本，用起来不爽，数据获取失败，发现bug，或者有好的idea，都欢迎给作者提供建议。\n \n 方式：\n 1.email:zeroztguo@163.com \n 2.在作者大学城空间留言建议</string>
-    <string name="share_app_message">欢迎使用【民院+】，它是一款民院师生专属的应用。它集课表、成绩查询，民院新闻，课外新闻，校园信息等功能于一体，希望它能给你的民院生活，带来些许便利。你可以到 myplus.bmob.cn 下载</string>
+    <string name="share_app_message">欢迎使用【民院+】，它是一款民院师生专属的应用。它集课表、成绩查询，民院地图，民院新闻，课外资讯，校园信息等功能于一体，希望它能给你的民院生活，带来些许便利。你可以到【http://myplus.bmob.cn/】下载</string>
     <string name="obtain_update_message_fail">获取更新信息失败</string>
     <string name="already_latest_version">It is the latest version</string>
     <string name="prompt">Prompt</string>
     <string name="immediately_download">立即下载</string>
     <string name="downloading_app">正在下载民院+</string>
-    <string name="author">author</string>
-    <string name="copyright">copyright</string>
+    <string name="author">Author</string>
+    <string name="copyright">Copyright</string>
     <string name="zero">mobile1432 Zero ZT.Guo.</string>
     <string name="requesting">Requested, wait a minute, please </string>
     <string name="zh_simple">中文简体</string>
     <string name="zh_tw">中文繁体</string>
     <string name="en">English</string>
     <string name="language_setting_success">Language set successfully</string>
-    <string name="course_info">课程信息</string>
+    <string name="course_info">Course information</string>
     <string name="timetable">Timetable</string>
     <string name="summer">Summer</string>
     <string name="winter">Winter</string>
@@ -124,4 +124,17 @@
     <string name="atm_pic_load_fail">ATM图片加载失败...</string>
     <string name="press_again">Again according to exit the app</string>
     <string name="map_simple">Map</string>
+    <string name="update_schedule_success">Updated schedule is successful</string>
+    <string name="course_name">Course</string>
+    <string name="classroom">Classroom</string>
+    <string name="teacher">Teacher</string>
+    <string name="class_num">Time</string>
+    <string name="gpa_query">Query gpa</string>
+    <string name="gpa_query_success">Query gpa successfully</string>
+    <string name="gpa_query_fail">Failed to query gpa</string>
+    <string name="this_week_not_course">There is no class in the current week</string>
+    <string name="night_mode">Night mode</string>
+    <string name="night_mode_prompt">If the light is weak,the use of night mode will be more protective to your eyes</string>
+    <string name="query_term_gpa">Query academic year or term’s gpa</string>
+    <string name="refresh_schedule">Refresh the schedule</string>
 </resources>
