--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -88,7 +88,7 @@
     <string name="from_college">抓取自民政学院教务系统和官网，版权归学校所有</string>
     <string name="from_net">数据来自于网上api，版权归原作者所有</string>
     <string name="feedback_message">民院+现在属于初期版本，用起来不爽，数据获取失败，发现bug，或者有好的idea，都欢迎给作者提供建议。\n \n 方式：\n 1.email:zeroztguo@163.com \n 2.在作者大学城空间留言建议</string>
-    <string name="share_app_message">欢迎使用【民院+】，它是一款民院师生专属的应用。它集课表、成绩查询，民院新闻，课外新闻，校园信息等功能于一体，希望它能给你的民院生活，带来些许便利。你可以到~~~下载</string>
+    <string name="share_app_message">欢迎使用【民院+】，它是一款民院师生专属的应用。它集课表、成绩查询，民院地图，民院新闻，课外资讯，校园信息等功能于一体，希望它能给你的民院生活，带来些许便利。你可以到【http://myplus.bmob.cn/】下载</string>
     <string name="obtain_update_message_fail">获取更新信息失败</string>
     <string name="already_latest_version">当前已是最新版本</string>
     <string name="prompt">提示</string>
@@ -128,5 +128,18 @@
     <string name="atm_pic_load_fail">ATM图片加载失败...</string>
     <string name="press_again">再按一次退出程序</string>
     <string name="map_simple">地图</string>
+    <string name="update_schedule_success">课表更新成功</string>
+    <string name="course_name">名称</string>
+    <string name="classroom">教室</string>
+    <string name="teacher">老师</string>
+    <string name="class_num">节数</string>
+    <string name="gpa_query">绩点查询</string>
+    <string name="gpa_query_success">绩点查询成功</string>
+    <string name="gpa_query_fail">绩点查询失败</string>
+    <string name="this_week_not_course">当前周还没有课</string>
+    <string name="night_mode">夜间模式</string>
+    <string name="night_mode_prompt">弱光环境下使用夜间模式更加护眼</string>
+    <string name="query_term_gpa">查询学年或学期绩点</string>
+    <string name="refresh_schedule">刷新课表</string>
 
 </resources>
